slight css modifications

--- a/index.html
+++ b/index.html
@@ -116,34 +116,33 @@
 
   <h3> Join Our Newsletter</h3>
   <p> Stay up to date with the latest happenings here at Columbia and beyond.
-    Sign up for our weekly newsletter at this <a href="https://adicu.us4.list-manage.com/subscribe/post?u=62d8b690f349b99dd7e0f3205&id=01a495e6ed">link</a></p>
+    Sign up for our weekly newsletter at this <a href="https://adicu.us4.list-manage.com/subscribe/post?u=62d8b690f349b99dd7e0f3205&id=01a495e6ed">link</a>.</p>
 
   </div>
 </div>
 
+<!-- <div class="second-div">
+</div> -->
 
 <!-- Website Footer-->
 
-<footer class="footer">
-  <!-- <span class="text-muted" id="footer-credit">Built by Will.</span> -->          
-        <ul class="nav">
-          <span class="text-muted" id="footer-credit">Built by Will.</span>
-          <li class="nav-item ml-auto">
-            <a id="footer-link" class="nav-link" target="__blank" href="https://www.fb.com/adicu"><i class="fab fa-facebook"></i></a>
-          </li>
-          <li class="nav-item">
-            <a id="footer-link" class="nav-link" target="__blank" href="https://www.instagram.com/adicolumbia"><i class="fab fa-instagram"></i></a>
-          </li>
-          <li class="nav-item">
-            <a id="footer-link" class="nav-link" target="__blank" href="https://www.twitter.com/adicu"><i class="fab fa-twitter-square"></i></a>
-          </li>
-          <li class="nav-item">
-            <a id="footer-link" class="nav-link" target="__blank" href="https://www.linkedin.com/company/adicu/"><i class="fab fa-linkedin"></i></a>
-          </li>
-      </ul>
-
-</footer>
-
+<nav class="navbar navbar-light bg-white">
+  <ul class="nav" id="adi-footer">
+    <span class="text-muted" id="footer-credit">Built by Will.</span>
+    <li class="nav-item ml-auto">
+      <a id="footer-link" class="nav-link" target="__blank" href="https://www.fb.com/adicu"><i class="fab fa-facebook"></i></a>
+    </li>
+    <li class="nav-item">
+      <a id="footer-link" class="nav-link" target="__blank" href="https://www.instagram.com/adicolumbia"><i class="fab fa-instagram"></i></a>
+    </li>
+    <li class="nav-item">
+      <a id="footer-link" class="nav-link" target="__blank" href="https://www.twitter.com/adicu"><i class="fab fa-twitter-square"></i></a>
+    </li>
+    <li class="nav-item">
+      <a id="footer-link" class="nav-link" target="__blank" href="https://www.github.com/adicu/"><i class="fab fa-github"></i></a>
+    </li>
+  </ul>
+</nav>
 
 <script>
 /* Randomly select a new background image each time */
