added mockup for a sample subpage

--- a/labs.html
+++ b/labs.html
@@ -124,14 +124,16 @@
     <a href="#" class="green"></a>
     <div class="url"></div>
   </div>
-  <h1>ADI</h1>
-  <h2>All things tech at Columbia</h2>
+  <h1>Labs</h1>
+  <h2>Learn the tools you don't cover in class</h2>
   <h3> What we do</h3>
-  <p> ADI is a student group at Columbia that aims to foster a community of students interested in technology.</p>
+  <p>Quam vulputate dignissim suspendisse in est ante. Aliquam faucibus purus in massa. Pretium quam vulputate dignissim suspendisse in est ante in nibh. Quam viverra orci sagittis eu volutpat odio facilisis. Orci eu lobortis elementum nibh tellus. Nunc non blandit massa enim nec dui. Amet justo donec enim diam vulputate ut pharetra. Diam quam nulla porttitor massa id neque. Tortor consequat id porta nibh venenatis cras sed felis. Lectus mauris ultrices eros in cursus turpis. Duis ultricies lacus sed turpis.</p>
+  <p>Quam vulputate dignissim suspendisse in est ante. Aliquam faucibus purus in massa. Pretium quam vulputate dignissim suspendisse in est ante in nibh. Quam viverra orci sagittis eu volutpat odio facilisis. Orci eu lobortis elementum nibh tellus. Nunc non blandit massa enim nec dui. Amet justo donec enim diam vulputate ut pharetra. Diam quam nulla porttitor massa id neque. Tortor consequat id porta nibh venenatis cras sed felis. Lectus mauris ultrices eros in cursus turpis. Duis ultricies lacus sed turpis.</p>
 
-  <h3> Join Our Newsletter</h3>
-  <p> Stay up to date with the latest happenings here at Columbia and beyond.
-    Sign up for our weekly newsletter at this <a href="https://adicu.us4.list-manage.com/subscribe/post?u=62d8b690f349b99dd7e0f3205&id=01a495e6ed">link</a>.</p>
+  <p>Quam vulputate dignissim suspendisse in est ante. Aliquam faucibus purus in massa. Pretium quam vulputate dignissim suspendisse in est ante in nibh. Quam viverra orci sagittis eu volutpat odio facilisis. Orci eu lobortis elementum nibh tellus. Nunc non blandit massa enim nec dui. Amet justo donec enim diam vulputate ut pharetra. Diam quam nulla porttitor massa id neque. Tortor consequat id porta nibh venenatis cras sed felis. Lectus mauris ultrices eros in cursus turpis. Duis ultricies lacus sed turpis.</p>
+  <p>Quam vulputate dignissim suspendisse in est ante. Aliquam faucibus purus in massa. Pretium quam vulputate dignissim suspendisse in est ante in nibh. Quam viverra orci sagittis eu volutpat odio facilisis. Orci eu lobortis elementum nibh tellus. Nunc non blandit massa enim nec dui. Amet justo donec enim diam vulputate ut pharetra. Diam quam nulla porttitor massa id neque. Tortor consequat id porta nibh venenatis cras sed felis. Lectus mauris ultrices eros in cursus turpis. Duis ultricies lacus sed turpis.</p>
+
+  <p>Quam vulputate dignissim suspendisse in est ante. Aliquam faucibus purus in massa. Pretium quam vulputate dignissim suspendisse in est ante in nibh. Quam viverra orci sagittis eu volutpat odio facilisis. Orci eu lobortis elementum nibh tellus. Nunc non blandit massa enim nec dui. Amet justo donec enim diam vulputate ut pharetra. Diam quam nulla porttitor massa id neque. Tortor consequat id porta nibh venenatis cras sed felis. Lectus mauris ultrices eros in cursus turpis. Duis ultricies lacus sed turpis.</p>
 
   </div>
 </div>
@@ -157,7 +159,7 @@
       <a id="footer-link" class="nav-link" target="__blank" href="https://www.github.com/adicu/"><i class="fab fa-github"></i></a>
     </li>
   </ul>
-</nav> 
+</nav>
 
 <script>
 /* Randomly select a new background image each time */
